--- a/index.html
+++ b/index.html
@@ -61,7 +61,6 @@ button{
   font-family:'Cinzel', serif;
   font-size:16px;
   cursor:pointer;
-  background:url(https://i.ibb.co/nNg5LnTx/pattern.jpg) repeat;
 }
 
 button:hover{
@@ -82,16 +81,16 @@ button:hover{
 <div class="generator-wrapper">
 <div class="form-title">ГЕНЕРАТОР АНКЕТЫ</div>
 
-<label>Имя (top-name-capsule)</label>
+<label>Имя Фаимлия на английском</label>
 <input type="text" id="name">
 
-<label>Возраст (sup)</label>
+<label>Возраст</label>
 <input type="text" id="age">
 
-<label>Фото 1 URL</label>
+<label>Фото 1 (URL)</label>
 <input type="text" id="photo1">
 
-<label>Фото 2 URL</label>
+<label>Фото 2 (URL)</label>
 <input type="text" id="photo2">
 
 <label>Внешность</label>
@@ -225,3 +224,4 @@ bgElements.forEach(el => {
 
 </body>
 </html>
+
