--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@ button{
   font-size:16px;
   cursor:pointer;
   background:url(https://i.ibb.co/nNg5LnTx/pattern.jpg) repeat;
+  color: #ebebeb;
 }
 
 #output{
@@ -241,3 +242,4 @@ function generate(){
 
 </body>
 </html>
+
